<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>strobe</groupId>
    <artifactId>strobe-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
        <module>strobe-utils</module>
        <module>strobe-window</module>
        <module>strobe-debug</module>
        <module>strobe-graphics</module>
        <module>strobe-window-glfw</module>
        <module>strobe-transform</module>
        <module>strobe-graphics-bindable-opengl</module>
        <module>strobe-engine</module>
        <module>strobe-debug-imgui</module>
        <module>strobe-ecs</module>
        <module>stobe-ecs-context</module>
        <module>strobe-graphics-rendergraph</module>
        <module>strobe-light</module>
        <module>strobe-camera</module>
        <module>strobe-graphics-renderables-opengl</module>
        <module>strobe-material</module>
        <module>strobe-game</module>
        <module>strobe-assimp</module>
        <module>strobe-engine-core</module>
    </modules>

    <properties>
        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <archtype.encoding>${encoding}</archtype.encoding>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>

        <lwjgl.version>3.2.3</lwjgl.version>
        <joml.version>1.10.1</joml.version>
        <imgui.version>1.83.1</imgui.version>
        <lwjgl.natives>natives-windows</lwjgl.natives>
        <junit-platform.version>5.3.1</junit-platform.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>16</release>
                    <source>16</source>
                    <target>16</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>${basedir}/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>
    </build>


    <dependencyManagement>
        <dependencies>
            <!-- module dependencies !-->
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-ecs</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>stobe-ecs-context</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-material</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-debug-imgui</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-graphics-bindable-opengl</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-light</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-camera</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-graphics-rendergraph</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-engine</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-window</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-graphics</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-debug</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-transform</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-window-glfw</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>strobe</groupId>
                <artifactId>strobe-utils</artifactId>
                <version>0.1.0-SNAPSHOT</version>
                <scope>compile</scope>
            </dependency>

            <!-- actual dependencies !-->
            <!--LWJGL !-->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl</artifactId>
                <classifier>${lwjgl.natives}</classifier>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>

            <!-- OPENGL !-->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <classifier>${lwjgl.natives}</classifier>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-opengl</artifactId>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- STB !-->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-stb</artifactId>
                <classifier>${lwjgl.natives}</classifier>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- JOML !-->
            <dependency>
                <groupId>org.joml</groupId>
                <artifactId>joml</artifactId>
                <version>${joml.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- GLFW !-->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-glfw</artifactId>
                <classifier>${lwjgl.natives}</classifier>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- DearImGui !-->
            <dependency>
                <groupId>io.github.spair</groupId>
                <artifactId>imgui-java-binding</artifactId>
                <version>${imgui.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.github.spair</groupId>
                <artifactId>imgui-java-lwjgl3</artifactId>
                <version>${imgui.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>io.github.spair</groupId>
                <artifactId>imgui-java-natives-windows</artifactId>
                <version>${imgui.version}</version>
                <scope>compile</scope>
            </dependency>
            <!-- ASSIMP !-->
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-assimp</artifactId>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-assimp</artifactId>
                <classifier>${lwjgl.natives}</classifier>
                <version>${lwjgl.version}</version>
                <scope>compile</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- JUNIT !-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-platform.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>